// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBarHeader renders with empty title 1`] = `
<MenuItem>
  <br />
  <Link
    to="/"
  >
    <Image
      as="img"
      size="small"
      src="Icon5.png"
      ui={true}
    />
  </Link>
  <br />
  <MenuHeader
    className="side-bar-header"
  >
    <br />
    Welcome!
  </MenuHeader>
</MenuItem>
`;

exports[`SideBarHeader renders with title 1`] = `
<MenuItem>
  <br />
  <Link
    to="/"
  >
    <Image
      as="img"
      size="small"
      src="Icon5.png"
      ui={true}
    />
  </Link>
  <br />
  <MenuHeader
    className="side-bar-header"
  >
    <br />
    JUST A TITLE
  </MenuHeader>
</MenuItem>
`;

exports[`SideBarHeader renders without title 1`] = `
<MenuItem>
  <br />
  <Link
    to="/"
  >
    <Image
      as="img"
      size="small"
      src="Icon5.png"
      ui={true}
    />
  </Link>
  <br />
  <MenuHeader
    className="side-bar-header"
  >
    <br />
    Welcome!
  </MenuHeader>
</MenuItem>
`;
